apps/vaultwarden/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: vaultwarden
  extAuth:
    grpc:
      backendRefs:
        - group: ""
          kind: Service
          name: homelab-envoy-proxy-bouncer
          port: 8080
          namespace: crowdsec
